--- a/views/contact.erb
+++ b/views/contact.erb
@@ -2,13 +2,19 @@
 
 <div id="" class="eight columns">
 
-<h1>GET IN CONTACT</h1>
+<h5>GET IN CONTACT</h5>
 <p>Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia <span class="reverse">deserunt</span> mollit anim id est laborum.</p>
+proident,<br> sunt in culpa qui officia <span class="reverse">deserunt</span> mollit anim id est laborum.</p>
 
-
+<p>97 Andrew St<br>Brighton, TAS<br>7030<br><br>p: 0362 1234<br>e: info@somewhere.com</p>
 	
 </div><!-- / -->
+
+
+
+
+
+
 
 <div id="" class="eight columns">
 
