--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -8,7 +8,7 @@
 	A show and tell of what's been
 	keeping us busy.
 	</p>
-<span class="glyphs fancylink">$</span><h6 class="calltoaction fancylink">SEE MORE</h6>
+<span class="glyphs">)</span><h6 class="calltoaction fancylink">SEE MORE</h6>
 	
 <!-- 	<span class="glyphs fancylink">$</span><h5 class="calltoaction fancylink">SEE MORE</h5> -->
 
