--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,6 +39,15 @@
 
 
 		<%= yield %>
+
+		<footer class="row">
+			<div id="" class="four columns">
+				
+			</div><!-- / -->
+			<div id="" class="twelve columns">
+				
+			</div><!-- / -->
+		</footer>
 	</div>
 
 <script src="/js/jquery-1.7.1.min.js"></script> 
