Changed grid for slideshow

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -10,12 +10,9 @@
   position: relative;
 }
 .dave {
-  position: absolute;
-  bottom: 25%;
-  left: 0px;
+  padding-top: 90px;
   /*background:url(@pattern) @background;*/
 
-  margin-left: 10px;
 }
 @font-face {
   font-family: 'IconicStrokeRegular';
@@ -50,8 +47,11 @@ img {
   margin: -0.7em 0 0 -0.5em;
 }
 #portfolio img {
+  max-width: 94%;
+  padding: 3%;
   background: #fff;
-  outline: 0px solid #444444;
+  outline: 1px solid #ccc;
+  border-radius: 2px;
   box-shadow: 3px 3px 3px #6b6b6b;
   z-index: 200;
   position: relative;
@@ -75,7 +75,7 @@ body {
   background-color: #cccccc;
   padding-top: 0px;
   font-family: "Hammersmith One";
-  background: url('/images/bg_texture2.jpg') #cccccc fixed;
+  background: url('/images/bg_texture2.jpg') #cccccc scroll;
 }
 h1,
 h2,
