--- a/public/css/theme.less
+++ b/public/css/theme.less
@@ -31,11 +31,8 @@
 
 
 .dave {
-  position: absolute;
-  bottom: 25%;
-  left: 0px;
+  padding-top: 90px;
   /*background:url(@pattern) @background;*/
-  margin-left: 10px;
 }
 
 
@@ -113,8 +110,11 @@ img {
 
 #portfolio img {
 
+  max-width: 94%;
+  padding: 3%;
   background: #fff;
-  outline: 0px solid @secondary;
+  outline: 1px solid #ccc;
+  border-radius: 2px;
   box-shadow: 3px 3px 3px #6b6b6b;
   z-index: 200;
   position: relative;
@@ -149,7 +149,7 @@ body {
   background-color: @background;
   padding-top: 0px;
   font-family: @bodyfont;
-  background:url(@pattern) @background fixed;
+  background:url(@pattern) @background scroll;
 }
 
 h1, h2, h3, h4, h5 ,h6 {
