--- a/public/css/theme.less
+++ b/public/css/theme.less
@@ -102,11 +102,12 @@ img {
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 100;
+    z-index: 200;
 
     margin: -0.7em 0 0 -0.5em;
 
 }
+
 
 #portfolio img {
 
@@ -116,7 +117,7 @@ img {
   outline: 1px solid #ccc;
   border-radius: 2px;
   box-shadow: 3px 3px 3px #6b6b6b;
-  z-index: 200;
+  z-index: 300;
   position: relative;
 }
 
@@ -163,7 +164,11 @@ p, li, a {
   font-family: @bodyfont;
 }
 
-
+hr {
+  height: 0px;
+  border: none;
+  border-top: 1px dotted #757575;
+}
 
 hr.sixteen{
   border: none;
@@ -172,12 +177,14 @@ hr.sixteen{
   padding-top: 6px;
 }
 
+
+
 .article {
   margin-bottom: 20px;
 }
 
 .article h4 {
-  border-bottom: 1px solid #bbb;
+  border-bottom: 1px dotted #757575;
   padding-bottom: 5px;
   margin-bottom: 14px;
 }
@@ -251,7 +258,7 @@ hr.sixteen{
 
 .calltoaction {
   float: left;
-  padding: 0px 0px 0px 12px;
+  padding: 0px 0px 0px 9px;
   color: @glyphs;
 }
 
@@ -496,6 +503,7 @@ CENTERED MENU
    position:relative;
    left:50%;
    top:0px;
+   border-bottom: 1px solid transparent;
 }
 #centeredmenu ul li a {
    display:block;
@@ -542,6 +550,7 @@ CENTERED MENU
   margin-top: 2px;
   background:url(@pattern3) repeat @background fixed;
   border-radius: 2px;
+  border-bottom: 0;
 }
 
 #centeredmenu ul ul li:first-child {
@@ -607,7 +616,7 @@ CENTERED MENU
 #centeredmenu ul li a {
    display:block;
    margin:0;
-   padding: 1em 1em;
+   padding: 1em 1em .8em 1em;
    line-height:1em;
    text-decoration:none;
    color:@primary;
