--- a/views/slideshow.erb
+++ b/views/slideshow.erb
@@ -1,30 +1,37 @@
 <hr class="sixteen columns">
 
-<div id="slider" class="sixteen columns">
+<div id="slider" class="row">
 			
 <div class="flexslider">
 <ul class="slides">
 			    
-	<li>
-		<img src="/images/slide1.jpg" alt="">
-			<div class="captions hide-on-phones">
-				<h3>LESS extends CSS with dynamic behavior.</h3>
-			</div>
+	<li class="row frame">
+		<div id="" class="twelve columns img-anim-1xxx">
+			<img src="/images/mac.png" alt="">
+		</div>	
+		<div id="" class="text-anim-1 four columns">			
+				<h3 class="highlight">FIRST SLIDE</h3>
+					<hr>
+				<p>THIS IS A PARAGRAPH GIVING FURTHER DETAIL.</p>
+					<hr>
+				<a class="button radius">SIGN UP</a>
+		</div><!-- / -->
 	</li>
 
-	<li>
-		<img src="/images/slide1.jpg" alt="">
-			<div class="captions hide-on-phones">
-				<h3>Runs on both the client & server-side.</h3>
-			</div>
+	<li class="row frame">
+		<div id="" class="twelve columns img-anim-1xxx">
+			<img src="/images/mac2.png" alt="">
+		</div>	
+		<div id="" class="text-anim-1 four columns">			
+				<h3 class="highlight">SECOND SLIDE</h3>
+					<hr>
+				<p>THIS IS A PARAGRAPH GIVING FURTHER DETAIL.</p>
+					<hr>
+				<a class="button radius">SIGN UP</a>
+		</div><!-- / -->
 	</li>
 
-	<li>
-		<img src="/images/slide1.jpg" alt="">
-			<div class="captions hide-on-phones">
-				<h3>Works with Node.js and Rhino.</h3>
-			</div>
-	</li>
+
 
 </ul>
 </div><!-- /end flexslider -->
