--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -5,14 +5,12 @@
 #sequence li {
   list-style: none;
 }
-#sequence img {
-  margin-left: 10px;
-  position: relative;
-}
 .dave {
-  padding-top: 90px;
   /*background:url(@pattern) @background;*/
 
+}
+.frame {
+  overflow: hidden;
 }
 @font-face {
   font-family: 'IconicStrokeRegular';
@@ -624,7 +622,7 @@ flex-container a:active, .flexslider a:active {
 /* FlexSlider Necessary Styles
 *********************************/.flexslider {
   width: 100%;
-  margin: 0;
+  margin: 20px 0 20px 0;
   padding: 0;
 }
 .flexslider .slides > li {
@@ -758,32 +756,4 @@ html[xmlns] .slides {
 }
 .flex-control-nav li a.active, .flex-control-nav li a:hover {
   background: #df6840;
-}
-/* Addons */
-.flex-container {
-  height: auto;
-  margin-top: 0;
-  top: 0px;
-}
-.captions {
-  position: absolute;
-  bottom: 25%;
-  left: 0px;
-}
-.captions h3 {
-  background: url('/images/bg_texture2.jpg') #df6840;
-  color: #cccccc;
-  padding: 8px 20px 2px 20px;
-  display: block;
-  width: 100%;
-  opacity: 1;
-  opacity: 0;
-}
-.flexslider .slides img {
-  max-width: 97.8%;
-  padding: 1% 1% 1% 1%;
-  background: #fff;
-  outline: 1px solid #ccc;
-  border-radius: 2px;
-  box-shadow: 3px 3px 3px #6b6b6b;
 }
