--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,13 @@
 
   <link href="/css/crossbones.css" rel="stylesheet">  
   <link href="/css/theme.css" rel="stylesheet">
+
 	<link href='http://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet' type='text/css'>
+
+	<script src="/js/jquery-1.7.1.min.js"></script> 
+	<script src="/js/jquery.flexslider-min.js"></script>
+	<script src="/js/app.js"></script>  	
+
 </head>
 <body>
 	<div class="container">
@@ -50,8 +56,6 @@
 		</footer>
 	</div>
 
-<script src="/js/jquery-1.7.1.min.js"></script> 
-<script src="/js/jquery.flexslider.js"></script>
-<script src="/js/app.js"></script>  	
+
 </body>
 </html>
